<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotConnectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_not_connect"
            style="@style/btn_style"
            android:layout_centerInParent="true"
            android:text="@string/btn_retry_againg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_message_not_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_not_connect"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="@string/warrning_error_net" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit_not_connect"
            style="@style/btn_style"
            android:layout_centerInParent="true"
            android:text="@string/item_exit"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/btn_not_connect"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>