<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".OrderPageForUser">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input_layout_style"
                app:helperText="@string/txt_objectName"
                android:paddingRight="5dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_name_edit_order_user"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input_layout_style"
                android:hint="@string/txt_amount">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_amount_edit_order_user"
                    android:text="0"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:paddingRight="5dp"
                style="@style/input_layout_style"
                app:helperText="@string/txt_unit"
                >

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spin_unit_edit_order_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input_layout_style"
                android:hint="@string/txt_description">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_description_edit_order_user"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_edit_edit_order_user"
                    style="@style/btn_style"
                    android:layout_marginLeft="5dp"
                    android:text="@string/btn_edit" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_delete_edit_order_user"
                    style="@style/btn_style"
                    android:text="@string/btn_delete" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/prog_edit_order_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:visibility="invisible" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>